# Hanabi4HMI

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  ci-bst-check.sh  ci-format.sh  ci-integration-test.sh  ci-lint.sh  ci-unit-test.sh  hri_build.py  pkgInfo.py  pyproject.toml  unrestrict_wheel_platform.sh
src/hanabi/: __main__.py  card.py  cli.py  game.py  moves.py  observations.py  recording.py  server.py
src/hanabi-ui/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/hanabi-ui/src/: App.tsx  Discarded.tsx  GameOver.tsx  LeftSide.tsx  RightSide.tsx  main.tsx  moves.ts  observations.ts  state.ts  store.ts  theme.ts  vite-env.d.ts
src/hanabi-ui/src/client/: init.ts
src/hanabi-ui/src/playing_area/: Card.tsx  CardImage.tsx  Fireworks.tsx  Hand.tsx  HandCard.tsx  Middle.tsx
src/hanabi/agents/: __init__.py  human_agent.py  timing.py
src/hanabi/config/: game.py  research.py  server.py
src/hanabi/html/static/: player_choose_page.html
